--- a/admin/public/css/style.css
+++ b/admin/public/css/style.css
@@ -12,3 +12,11 @@ padding: 1% 1% 1% 1% ;
 	width: 100px;
 	height: auto;
 }
+
+
+
+.imgPreview{
+	width: 100%;
+	object-fit: cover;
+	height: 320px;
+}
